
noinst_LTLIBRARIES = libchime.la

nobase_include_HEADERS =  dsp/ChimeInput.h

libchime_la_SOURCES =  ChimeInput.C

libchime_la_LIBADD = -lch_vdif_assembler -lch_frb_io -lhdf5 -lpng

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

